[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/scene/rich_text_transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/script/Dialog.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )
bbcode_transition_label = ExtResource( 1 )

[node name="DialogContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="ColorRect" type="ColorRect" parent="DialogContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="DialogContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="HFlowContainer" type="HFlowContainer" parent="DialogContainer/ColorRect/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 864.0
margin_bottom = 440.0
custom_constants/vseparation = 6
custom_constants/hseparation = 8

[node name="BranchContainer" type="MarginContainer" parent="DialogContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
custom_constants/margin_right = -32
custom_constants/margin_top = 256
custom_constants/margin_left = 512
custom_constants/margin_bottom = -32

[node name="ColorRect" type="ColorRect" parent="DialogContainer/BranchContainer"]
margin_left = 512.0
margin_top = 256.0
margin_right = 928.0
margin_bottom = 504.0
color = Color( 0.137255, 0.129412, 0.196078, 1 )

[node name="MarginContainer" type="MarginContainer" parent="DialogContainer/BranchContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -124.0
margin_right = 208.0
margin_bottom = 124.0
custom_constants/margin_right = 32
custom_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer"]
margin_left = 32.0
margin_right = 384.0
margin_bottom = 248.0
custom_constants/separation = 32
alignment = 1

[node name="Button" type="Button" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 352.0
margin_bottom = 56.0

[node name="RichTextTransition" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_text = "[center]Placeholder Option[/center]"
text = "Placeholder Option"
time = 1.0

[node name="Button2" type="Button" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 352.0
margin_bottom = 108.0

[node name="RichTextTransition" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button2" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_text = "[center]Placeholder Option[/center]"
text = "Placeholder Option"
time = 1.0

[node name="Button3" type="Button" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 352.0
margin_bottom = 160.0

[node name="RichTextTransition" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button3" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_text = "[center]Placeholder Option[/center]"
text = "Placeholder Option"
time = 1.0

[node name="Button4" type="Button" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 352.0
margin_bottom = 212.0

[node name="RichTextTransition" parent="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button4" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_text = "[center]Placeholder Option[/center]"
text = "Placeholder Option"
time = 1.0

[node name="QuestionContainer" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/margin_right = 128
custom_constants/margin_top = 148
custom_constants/margin_left = 128
custom_constants/margin_bottom = 148

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionContainer"]
margin_left = 128.0
margin_top = 148.0
margin_right = 896.0
margin_bottom = 452.0
alignment = 1

[node name="RichTextTransition" parent="QuestionContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 130.0
margin_right = 768.0
margin_bottom = 145.0
bbcode_text = "This is a placeholder question?"
text = "This is a placeholder question?"
time = 1.0

[node name="LineEdit" type="LineEdit" parent="QuestionContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 768.0
margin_bottom = 173.0
max_length = 24
context_menu_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[connection signal="button_down" from="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="DialogContainer/BranchContainer/ColorRect/MarginContainer/VBoxContainer/Button4" to="." method="_on_Button4_button_down"]
[connection signal="text_entered" from="QuestionContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
